--- a/config_sample.env
+++ b/config_sample.env
@@ -48,8 +48,8 @@ NETRC_URL = ""
 MEGA_API_KEY = "VOpkUIDY"
 MEGA_EMAIL_ID = "cyybershokal@gmail.com"
 MEGA_PASSWORD = "MMkk66*#"
-BLOCK_MEGA_FOLDER = ""
-BLOCK_MEGA_LINKS = ""
+BLOCK_MEGA_FOLDER = "False"
+BLOCK_MEGA_LINKS = "False"
 # Shortener
 SHORTENER = ""
 SHORTENER_API = ""
