--- a/config_sample.env
+++ b/config_sample.env
@@ -1,26 +1,28 @@
+# Remove this line before deploying
+_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = "5045631075:AAE2lf-wrEvW_TxnGtEcwUMdMhawDo5yrvg"
-GDRIVE_FOLDER_ID = "1Bk2Lt43GzHsZhzt0L7g75cfbc7sH-FCp"
-OWNER_ID = 314387675
+BOT_TOKEN = ""
+GDRIVE_FOLDER_ID = ""
+OWNER_ID =
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = "True"
-TELEGRAM_API = 9411099
-TELEGRAM_HASH = "b4d20b78bb818875e3b1c4b7febbbc3a"
+IS_TEAM_DRIVE = ""
+TELEGRAM_API =
+TELEGRAM_HASH = ""
 # OPTIONAL CONFIG
 DATABASE_URL = ""
-AUTHORIZED_CHATS = "-1001614104550"
+AUTHORIZED_CHATS = ""
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = "True"
-INDEX_URL = "https://mirror.pongpongofficialbd.workers.dev/0:"
-STATUS_LIMIT = "4"
-STOP_DUPLICATE = "True"
+USE_SERVICE_ACCOUNTS = ""
+INDEX_URL = ""
+STATUS_LIMIT = ""
+STOP_DUPLICATE = ""
 CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
 # Update
-UPSTREAM_REPO = "https://github.com/professorop/247-Mirror-Bot"
+UPSTREAM_REPO = ""
 UPSTREAM_BRANCH = ""
 # Leech
 TG_SPLIT_SIZE = ""
@@ -28,7 +30,7 @@ AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
 CUSTOM_FILENAME = ""
 # qBittorrent
-BASE_URL_OF_BOT = "https://pong247.herokuapp.com/"
+BASE_URL_OF_BOT = ""
 SERVER_PORT = ""
 WEB_PINCODE = ""
 QB_SEED = ""
@@ -45,17 +47,16 @@ MULTI_SEARCH_URL = ""
 YT_COOKIES_URL = ""
 NETRC_URL = ""
 # Mega
-MEGA_API_KEY = "VOpkUIDY"
-MEGA_EMAIL_ID = "cyybershokal@gmail.com"
-MEGA_PASSWORD = "MMkk66*#"
-BLOCK_MEGA_FOLDER = "False"
-BLOCK_MEGA_LINKS = "False"
+MEGA_API_KEY = ""
+MEGA_EMAIL_ID = ""
+MEGA_PASSWORD = ""
+BLOCK_MEGA_FOLDER = ""
+BLOCK_MEGA_LINKS = ""
 # Shortener
 SHORTENER = ""
 SHORTENER_API = ""
 # GDTOT COOKIE
-PHPSESSID = "{4k45n1srnuriofcqfb3u290dnp}"
-CRYPT = "M3c0aXY0aklLUFkxaUQ4aHAzSWEvZXFwTkoyUVMyNjc1VGRmbUI2TEtLST0%3D"
+CRYPT = ""
 # Size Limits
 TORRENT_DIRECT_LIMIT = ""
 ZIP_UNZIP_LIMIT = ""
@@ -63,15 +64,16 @@ CLONE_LIMIT = ""
 MEGA_LIMIT = ""
 STORAGE_THRESHOLD = ""
 # Buttons
-VIEW_LINK = "True"
-BUTTON_FOUR_NAME = "Drive Access"
-BUTTON_FOUR_URL = "https://t.me/Putimaas"
+VIEW_LINK = ""
+BUTTON_FOUR_NAME = ""
+BUTTON_FOUR_URL = ""
 BUTTON_FIVE_NAME = ""
 BUTTON_FIVE_URL = ""
 BUTTON_SIX_NAME = ""
 BUTTON_SIX_URL = ""
 # Torrent Search
 SEARCH_API_LINK = ""
+SEARCH_LIMIT = ""
 SEARCH_PLUGINS = '["https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/rarbg.py",
                    "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/piratebay.py",
                    "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/legittorrents.py",
